--- a/MyProjects/SightMap/src/app/create/create.component.html
+++ b/MyProjects/SightMap/src/app/create/create.component.html
@@ -31,41 +31,18 @@
                 </div>
 
                 <div class="col-6">
-                    <div class="row">
+                    <div style="overflow: auto; white-space: nowrap;">
 
-                        <div class="col-6" (contextmenu)="swapDiv(div1, $event)" #div1>
-                            <img class="img-thumbnail" src="\img\empty.jpg" />
-                            <input class="file" type="file" name="images[1].file" accept="image/*"
-                                (change)="loadImage(div1)" #input1 />
-                            <input type="hidden" name="images[1].isMain"
-                                value="{{div1.classList.contains('main-preview')}}" />
+                        <div style="display: inline-block;" class="col-6" *ngFor="let page of album; let i = index;" (contextmenu)="swapDiv(div, $event)" #div>
+                            <img class="img-thumbnail" [src]="page.imgAsUrl" />
+                            <!-- <input class="file" type="file" name="{{i}}" accept="image/*"
+                                (change)="loadImage(div)" /> -->
                         </div>
 
-                        <div class="col-6" (contextmenu)="swapDiv(div2, $event)" #div2>
+                        <div style="display: inline-block;" class="col-6" (contextmenu)="swapDiv(div2, $event)" #div1>
                             <img class="img-thumbnail" src="\img\empty.jpg" />
-                            <input class="file" type="file" name="images[2].file" accept="image/*"
-                                (change)="loadImage(div2)" #input2 />
-                            <input type="hidden" name="images[2].isMain"
-                                value="{{div2.classList.contains('main-preview')}}" />
-                        </div>
-                    </div>
-
-                    <div class="row">
-
-                        <div class="col-6" (contextmenu)="swapDiv(div3, $event)" #div3>
-                            <img class="img-thumbnail" src="\img\empty.jpg" />
-                            <input class="file" type="file" name="images[3].file" accept="image/*"
-                                (change)="loadImage(div3)" #input3 />
-                            <input type="hidden" name="images[3].isMain"
-                                value="{{div3.classList.contains('main-preview')}}" />
-                        </div>
-
-                        <div class="col-6" (contextmenu)="swapDiv(div4, $event)" #div4>
-                            <img class="img-thumbnail" src="\img\empty.jpg" />
-                            <input class="file" type="file" name="images[4].file" accept="image/*"
-                                (change)="loadImage(div4)" #input4 />
-                            <input type="hidden" name="images[4].isMain"
-                                value="{{div4.classList.contains('main-preview')}}" />
+                            <input class="file" type="file" name="empty" accept="image/*"
+                                (change)="loadImage(div1)"/>
                         </div>
                     </div>
                 </div>
