--- a/MyProjects/SightMap/src/app/create/create.component.html
+++ b/MyProjects/SightMap/src/app/create/create.component.html
@@ -33,16 +33,25 @@
                 <div class="col-6">
                     <div style="overflow: auto; white-space: nowrap;">
 
-                        <div style="display: inline-block;" class="col-6" *ngFor="let page of album; let i = index;" (contextmenu)="swapDiv(div, $event)" #div>
+                        <!-- <div style="display: inline-block;" *ngFor="let page of album; let i = index;" (contextmenu)="swapDiv(div, $event)" #div>
                             <img class="img-thumbnail" [src]="page.imgAsUrl" />
-                            <!-- <input class="file" type="file" name="{{i}}" accept="image/*"
-                                (change)="loadImage(div)" /> -->
-                        </div>
+                            <input class="file" type="file" name="{{i}}" accept="image/*"
+                                (change)="loadImage(div)" />
+                        </div> -->
+                        <ng-container #container></ng-container>
 
-                        <div style="display: inline-block;" class="col-6" (contextmenu)="swapDiv(div2, $event)" #div1>
+                        <ng-template #imgInput>
+                            <div style="display: inline-block;" (contextmenu)="swapDiv(div1, $event)" #div1>
+                                <img class="img-thumbnail" src="\img\empty.jpg" />
+                                <input class="file" type="file" name="empty" accept="image/*"
+                                    (change)="changeImage(div1)" />
+                            </div>
+                        </ng-template>
+
+                        <div style="display: inline-block;" (contextmenu)="swapDiv(div2, $event)" #div2>
                             <img class="img-thumbnail" src="\img\empty.jpg" />
                             <input class="file" type="file" name="empty" accept="image/*"
-                                (change)="loadImage(div1)"/>
+                                (change)="addNewImage(div2)" />
                         </div>
                     </div>
                 </div>
