Angular Обновлено создание объектов

--- a/MyProjects/SightMap/src/app/create/create.component.html
+++ b/MyProjects/SightMap/src/app/create/create.component.html
@@ -13,70 +13,77 @@
     <div class="container p-2 border">
         <form id="createSight" class="col" method="post" enctype="multipart/form-data" (ngSubmit)="beginUploading(form)"
             novalidate #form="ngForm">
-
-            <div class="form-group row">
-                <label class="col-1 col-form-label" for="name">Name</label>
-                <div class="col">
-                    <input class="form-control" type="text" id="name" name="name" placeholder="Enter name"
-                        [(ngModel)]="newSight.name" required pattern="^[А-Яа-яA-Za-z ]{2,}" />
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <div class="col-6">
-                    <plupload-comp [referenceId]="referenceId" [beginUpload]="beginUpload"
-                    (uploadComplete)="addSight($event)"></plupload-comp>
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-1 col-form-label" for="shortDescription">ShortDesc</label>
-                <div class="col">
-                    <input class="form-control" type="text" id="shortDescription" name="shortDescription"
-                        placeholder="Short description..." [(ngModel)]="newSight.shortDescription" required
-                        pattern="^[А-Яа-яA-Za-z ]{5,}" />
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-1 col-form-label" for="fullDescription">FullDesc</label>
-                <div class="col">
-                    <textarea class="form-control" type="text" id="fullDescription" name="fullDescription"
-                        placeholder="Full description..." [(ngModel)]="newSight.fullDescription" required
-                        pattern="^[А-Яа-яA-Za-z ]{5,}"></textarea>
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-1 col-form-label" for="type.id">Type</label>
-                <div class="col">
-                    <select class="form-control" id="type.id" name="type.id" [(ngModel)]="newSight.type.id" required
-                        pattern="^[1-9]+[0-9]{0,}">
-                        <option value="undefined" selected>Choose type...</option>
-                        <option *ngFor="let type of types" [value]="type.id" [text]="type.name">
-                        </option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <div class="col">
-                    <label class="col-form-label" for="latitude">Широта</label>
-                    <div>
-                        <input class="form-control" type="number" step="any" id="latitude" name="latitude"
-                            placeholder="Широта..." [(ngModel)]="newSight.latitude" required readonly />
-                    </div>
-                    <label class="col-form-label" for="longitude">Долгота</label>
-                    <div>
-                        <input class="form-control" type="number" step="any" id="longitude" name="longitude"
-                            placeholder="Долгота..." [(ngModel)]="newSight.longitude" required readonly />
+            <fieldset [disabled]="isDisabled">
+                <div class="form-group row">
+                    <label class="col-1 col-form-label" for="name">Name</label>
+                    <div class="col">
+                        <input class="form-control" type="text" id="name" name="name" placeholder="Enter name"
+                            [(ngModel)]="newSight.name" required pattern="^[А-Яа-яA-Za-z ]{2,}" />
                     </div>
                 </div>
-                <div class="col">
-                    <yan-map (coordinateChanged)="setCoordinates($event)" [removeInitPoint]="removeInitPoint"></yan-map>
+
+                <div class="form-group row">
+                    <div class="row">
+                        <div class="col-5">
+                            <button class="btn btn-primary" type="button" (click)="onDeleteAllFiles()">Удалить все файлы</button>
+                        </div>   
+                    </div>
+                    <div class="col-6">
+                        <plupload-comp [referenceId]="referenceId" [beginUpload]="beginUpload" [deleteAllFiles]="deleteAllFiles"
+                            (uploadComplete)="addSight($event)"></plupload-comp>
+                    </div>
                 </div>
-            </div>
-            <button class="btn btn-primary" type="submit">Отправить</button>
+
+                <div class="form-group row">
+                    <label class="col-1 col-form-label" for="shortDescription">ShortDesc</label>
+                    <div class="col">
+                        <input class="form-control" type="text" id="shortDescription" name="shortDescription"
+                            placeholder="Short description..." [(ngModel)]="newSight.shortDescription" required
+                            pattern="^[А-Яа-яA-Za-z ]{5,}" />
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-1 col-form-label" for="fullDescription">FullDesc</label>
+                    <div class="col">
+                        <textarea class="form-control" type="text" id="fullDescription" name="fullDescription"
+                            placeholder="Full description..." [(ngModel)]="newSight.fullDescription" required
+                            pattern="^[А-Яа-яA-Za-z ]{5,}"></textarea>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-1 col-form-label" for="type.id">Type</label>
+                    <div class="col">
+                        <select class="form-control" id="type.id" name="type.id" [(ngModel)]="newSight.type.id" required
+                            pattern="^[1-9]+[0-9]{0,}">
+                            <option value="undefined" selected>Choose type...</option>
+                            <option *ngFor="let type of types" [ngValue]="type.id" [text]="type.name">
+                            </option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <div class="col">
+                        <label class="col-form-label" for="latitude">Широта</label>
+                        <div>
+                            <input class="form-control" type="number" step="any" id="latitude" name="latitude"
+                                placeholder="Широта..." [(ngModel)]="newSight.latitude" required readonly />
+                        </div>
+                        <label class="col-form-label" for="longitude">Долгота</label>
+                        <div>
+                            <input class="form-control" type="number" step="any" id="longitude" name="longitude"
+                                placeholder="Долгота..." [(ngModel)]="newSight.longitude" required readonly />
+                        </div>
+                    </div>
+                    <div class="col">
+                        <yan-map (coordinateChanged)="setCoordinates($event)" [removeInitPoint]="removeInitPoint">
+                        </yan-map>
+                    </div>
+                </div>
+                <button class="btn btn-primary" type="submit">Отправить</button>
+            </fieldset>
         </form>
     </div>
 
