--- a/MyProjects/SightMap/src/app/show/detail/detail.component.html
+++ b/MyProjects/SightMap/src/app/show/detail/detail.component.html
@@ -87,7 +87,7 @@
                 <div class="col">
                     <select class="form-control" id="type.id" name="type.id" [disabled]="isReadOnly" required
                         pattern="^[1-9]+[0-9]{0,}" [(ngModel)]="sight.type.id" >
-                        <option *ngFor="let type of types" [value]="type.id" [text]="type.name"
+                        <option *ngFor="let type of types" [ngValue]="type.id" [text]="type.name"
                             [selected]="type.id == sight.type.id">
                         </option>
                     </select>
