--- a/MyProjects/SightMap/src/app/create/create.component.html
+++ b/MyProjects/SightMap/src/app/create/create.component.html
@@ -29,7 +29,7 @@
                         </div>   
                     </div>
                     <div class="col">
-                        <plupload-comp [referenceId]="referenceId" [beginUpload]="beginUpload" [deleteAllFiles]="deleteAllFiles"
+                        <plupload-comp [beginUpload]="beginUpload" [deleteAllFiles]="deleteAllFiles"
                             (uploadComplete)="addSight($event)"></plupload-comp>
                     </div>
                 </div>
