--- a/MyProjects/SightMap/src/app/show/detail/detail.component.html
+++ b/MyProjects/SightMap/src/app/show/detail/detail.component.html
@@ -1,132 +1,127 @@
+<style>
+    input.ng-dirty.ng-invalid {
+        border: 2px solid #ff0000
+    }
+
+    input.ng-dirty.ng-valid {
+        border: 2px solid #6bc502
+    }
+</style>
+
 <div class="col" style="background-color: bisque;">
     <p class="text-center">Компонент детального просмотра</p>
 
     <div class="container p-2 text-center" style="overflow: auto;">
-        <style>
-            input.ng-dirty.ng-invalid {
-                border: 2px solid #ff0000
-            }
 
-            input.ng-dirty.ng-valid {
-                border: 2px solid #6bc502
-            }
-        </style>
         <form id="editForm" class="col" method="post" enctype="multipart/form-data"
-            (ngSubmit)="editSight(form1, sight.id)" novalidate #form1="ngForm">
+            novalidate #form="ngForm">
 
-            <div class="form-group row">
-                <label class="col-1 col-form-label" for="id">Id</label>
-                <div class="col">
-                    <input class="form-control" type="text" id="id" name="id" [value]="sight.id" readonly />
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-1 col-form-label" for="name">Name</label>
-                <div class="col">
-                    <input class="form-control" type="text" id="name" name="name" [readonly]="isReadOnly"
-                        [(ngModel)]="sight.name" required pattern="^[А-Яа-яA-Za-z0-9 ]{2,}" />
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-1 col-form-label" for="shortDesc">ShortDesc</label>
-                <div class="col">
-                    <input class="form-control" type="text" id="shortDesc" name="shortDescription"
-                        [readonly]="isReadOnly" [(ngModel)]="sight.shortDescription" required
-                        pattern="^[А-Яа-яA-Za-z ]{5,}" />
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-1 col-form-label" for="fullDesc">FullDesc</label>
-                <div class="col">
-                    <textarea class="form-control" type="text" id="fullDesc" name="fullDescription"
-                        [readonly]="isReadOnly" [(ngModel)]="sight.fullDescription" required
-                        pattern="^[А-Яа-яA-Za-z ]{5,}"></textarea>
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-1 col-form-label" for="createDate">CreateDate</label>
-                <div class="col">
-                    <input class="form-control" type="datetime-local" id="createDate" name="createDate"
-                        [value]="sight.createDate" readonly />
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <label class="col-1 col-form-label" for="updateDate">UpdateDate</label>
-                <div class="col">
-                    <input class="form-control" type="datetime-local" id="updateDate" name="updateDate"
-                        [value]="sight.updateDate" readonly />
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <div class="col-3">
-                    <span *ngFor="let page of sight.album">
-                        <img class="thumbnail m-1" *ngIf="page.isMain" src="{{page.imagePath + '\\' + page.imageName}}" (contextmenu)="openContextMenu($event, page)">
-                    </span>
-                </div>
-                <div class="col-9" style="overflow: auto; white-space: nowrap;">
-                    <img class="thumbnail m-1" *ngFor="let page of sight.album"
-                        src="{{page.imagePath + '\\' + page.imageName}}">
-                </div>
-            </div>
-
-            <div class="form-group row">
-                <div class="col">
-                    <label class="col-form-label" for="latitude">Широта</label>
-                    <div>
-                        <input class="form-control" type="number" step="any" id="latitude" name="latitude"
-                            placeholder="Широта..." [(ngModel)]="sight.latitude" required readonly />
-                    </div>
-                    <label class="col-form-label" for="longitude">Долгота</label>
-                    <div>
-                        <input class="form-control" type="number" step="any" id="longitude" name="longitude"
-                            placeholder="Долгота..." [(ngModel)]="sight.longitude" required readonly />
+            <fieldset [disabled]="isDisabled">
+                <div class="form-group row">
+                    <label class="col-1 col-form-label" for="id">Id</label>
+                    <div class="col">
+                        <input class="form-control" type="text" id="id" name="id" [value]="sight.id" readonly />
                     </div>
                 </div>
-                <div class="col">
-                    <yan-map (coordinateChanged)="setCoordinates($event)" [switchEditMode]="switchEditMode"
-                        [initPoint]="getInitPoint()"></yan-map>
-                </div>
-            </div>
 
-            <div class="form-group row">
-                <label class="col-1 col-form-label" for="type.id">Type</label>
-                <div class="col">
-                    <select class="form-control" id="type.id" name="type.id" [disabled]="isReadOnly" required
-                        pattern="^[1-9]+[0-9]{0,}" [(ngModel)]="sight.type.id">
-                        <option *ngFor="let type of types" [ngValue]="type.id" [text]="type.name"
-                            [selected]="type.id == sight.type.id">
-                        </option>
-                    </select>
+                <div class="form-group row">
+                    <label class="col-1 col-form-label" for="name">Name</label>
+                    <div class="col">
+                        <input class="form-control" type="text" id="name" name="name" [(ngModel)]="sight.name" required
+                            pattern="^[А-Яа-яA-Za-z0-9 ]{2,}" />
+                    </div>
                 </div>
-            </div>
-            <button class="btn btn-primary float-right m-1" type="button" (click)="switchEditBlock()">Изменить</button>
-            <button class="btn btn-primary float-right m-1" type="submit" [hidden]="isReadOnly">Применить</button>
+
+                <div class="form-group row">
+                    <label class="col-1 col-form-label" for="shortDesc">ShortDesc</label>
+                    <div class="col">
+                        <input class="form-control" type="text" id="shortDesc" name="shortDescription"
+                            [(ngModel)]="sight.shortDescription" required pattern="^[А-Яа-яA-Za-z ]{5,}" />
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-1 col-form-label" for="fullDesc">FullDesc</label>
+                    <div class="col">
+                        <textarea class="form-control" type="text" id="fullDesc" name="fullDescription"
+                            [(ngModel)]="sight.fullDescription" required pattern="^[А-Яа-яA-Za-z ]{5,}"></textarea>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-1 col-form-label" for="createDate">CreateDate</label>
+                    <div class="col">
+                        <input class="form-control" type="datetime-local" id="createDate" name="createDate"
+                            [value]="sight.createDate" readonly />
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-1 col-form-label" for="updateDate">UpdateDate</label>
+                    <div class="col">
+                        <input class="form-control" type="datetime-local" id="updateDate" name="updateDate"
+                            [value]="sight.updateDate" readonly />
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <album-comp [setAlbum]="sight.album" (mainImageSet)="mainImageSetInAlbum()"></album-comp>
+                </div>
+                
+                <div class="form-group row">
+                        <plupload-comp [beginUpload]="beginUpload"
+                        [deleteAllFiles]="deleteAllFiles" [resetMainImage]="resetMainImageInUpload"
+                        (mainImageSet)="mainImageSetInUpload()" (uploadComplete)="editSight($event)">
+                    </plupload-comp>
+                </div>
+
+                <div class="form-group row">
+                    <div class="col">
+                        <label class="col-form-label" for="latitude">Широта</label>
+                        <div>
+                            <input class="form-control" type="number" step="any" id="latitude" name="latitude"
+                                placeholder="Широта..." [(ngModel)]="sight.latitude" required readonly />
+                        </div>
+                        <label class="col-form-label" for="longitude">Долгота</label>
+                        <div>
+                            <input class="form-control" type="number" step="any" id="longitude" name="longitude"
+                                placeholder="Долгота..." [(ngModel)]="sight.longitude" required readonly />
+                        </div>
+                    </div>
+                    <div class="col">
+                        <yan-map (coordinateChanged)="setCoordinates($event)" [switchEditMode]="switchEditMode"
+                            [initPoint]="getInitPoint()"></yan-map>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-1 col-form-label" for="type.id">Type</label>
+                    <div class="col">
+                        <select class="form-control" id="type.id" name="type.id" required pattern="^[1-9]+[0-9]{0,}"
+                            [(ngModel)]="sight.type.id">
+                            <option *ngFor="let type of types" [ngValue]="type.id" [text]="type.name"
+                                [selected]="type.id == sight.type.id">
+                            </option>
+                        </select>
+                    </div>
+                </div>
+            </fieldset>
+            <button class="btn btn-primary float-right m-1" type="button" (click)="switchEditForm()">Изменить</button>
+            <button class="btn btn-primary float-right m-1" type="button" [hidden]="isDisabled" (click)="beginUploading(form)">Применить</button>
             <button class="btn btn-primary float-right m-1" type="button" (click)="deleteSight(sight.id)"
-                [hidden]="isReadOnly">Удалить</button>
+                [hidden]="isDisabled">Удалить</button>
+
         </form>
     </div>
     <div class="col m-t-3" style="background-color: lavender">
         <p>Комментарии:</p>
-        <form *ngIf="show" id="newReview" method="post" ngNativeValidate (ngSubmit)="addReview()">
+        <form *ngIf="isReviewEdit" id="newReview" method="post" ngNativeValidate (ngSubmit)="addReview()">
             <input type="text" name="message" placeholder="Введите сообщение..." required
                 [(ngModel)]="newReview.message" />
         </form>
-        <button class="btn btn-primary m-x-1" (click)="switchEdit(show)">Написать</button>
+        <button class="btn btn-primary m-x-1" (click)="switchEditReview()">Написать</button>
         <button class="btn btn-primary m-x-1" type="submit" form="newReview">Отправить</button>
         <review-comp *ngIf="reviews.length > 0; else noReview" [Reviews]="reviews"></review-comp>
         <ng-template #noReview>Ничего нет</ng-template>
     </div>
 </div>
-
-<ng-template #contextMenu let-image>
-    <ul>
-        <li>Сделать главной</li>
-        <li>Удалить</li>
-    </ul>
-</ng-template>
