--- a/MyProjects/SightMap/src/app/show/detail/review/review.component.html
+++ b/MyProjects/SightMap/src/app/show/detail/review/review.component.html
@@ -3,14 +3,13 @@
     <li *ngFor="let review of reviews; let show = false">
         <div>Автор: {{review.authorId}}</div>
         <div>Пишет: {{review.message}}</div>
-        <form *ngIf="show" method="post" #form="ngForm" ngNativeValidate
+        <form id="{{'formN'+review.parentId}}" *ngIf="isReadOnly" method="post" #form="ngForm" ngNativeValidate
               (ngSubmit)="addReview(review.id, review.itemId)">
             <input type="hidden" name="itemId" id="itemId" [value]="review.itemId" />
             <input type="hidden" name="parentId" id="parentId" [value]="review.id" />
-            <input type="text" name="message" placeholder="Введите сообщение..." required 
-                (focusout)="show = !show" [(ngModel)]="newReview.message" />
+            <input type="text" name="message" placeholder="Введите сообщение..." required [(ngModel)]="newReview.message" />
         </form>
-        <button class="btn btn-primary m-x-1" (click)="switchEdit(show)">Написать</button>
+        <button class="btn btn-primary m-x-1" (click)="switchEdit()">Написать</button>
         <button class="btn btn-primary m-x-1" type="submit" [attr.form]="'formN'+review.parentId">Отправить</button>
         <button class="btn btn-primary m-x-1" (click)="deleteReview(review)">Удалить</button>
         <review-comp *ngIf="review.children.length > 0" [Reviews]="review.children"></review-comp>
